web/static/static/bundle.css
/* ... */
/* view/theater-collections.css */
@layer components {
  .v-collection-banner-x {
    position: relative;
    aspect-ratio: 1000 / 185;
    width: 100%;
  }
  .v-collection-banner-link {
    display: block;
    width: 100%;
    height: 100%;
  }
  .v-collection-banner {
    position: relative;
    aspect-ratio: 1000 / 185;
    width: 100%;
  }
  .v-collection-title {
    position: absolute;
    inset: 0;
    display: grid;
    place-items: center;
    font-size: 35px;
    line-height: 40px;
    letter-spacing: -0.01em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    pointer-events: none;
  }
  .v-collection-playlist {
    max-width: 800px;
    color: var(--text-2);
    white-space: nowrap;
  }
  .v-collection-playlist-row {
    position: relative;
    width: 100%;
    align-items: center;
    padding-right: 1rem;
    border-radius: var(--radius-3);
  }
  .v-collection-playlist-row:nth-child(odd) {
    background: oklch(0 0 0 / 0.1);
  }
  .v-collection-playlist-row:hover:not(:has(button:hover)) {
    background: oklch(1 0 0 / 0.1);
  }
  .v-collection-playlist-row-link {
    position: absolute;
    inset: 0;
  }
  .v-collection-playlist-row > button {
    position: relative;
    z-index: 1;
  }
  .v-collection-playlist-row > * {
    flex: 0 0 auto;
  }
  .v-collection-playlist-row-image {
    width: 100%;
    height: 100%;
  }
  .v-collection-playlist-text {
    flex: 1;
    min-width: 8rem;
    gap: 0px;
  }
  .v-collection-playlist-title {
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .v-collection-playlist-info {
    color: var(--text-3);
  }
  .v-collection-playlist-info:last-child {
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .v-collection-playlist-release-date {
    font-variant-numeric: tabular-nums;
  }
}

/* view/upload.css */
@layer components {
  .v-button-upload {
    position: relative;
  }
  .v-button-upload-picker {
    display: none;
  }
  .v-button-upload-button {
    position: absolute;
    inset: 0;
    cursor: pointer;
  }
  .v-button-upload-overlay {
    position: absolute;
    inset: 0;
    background: oklch(0 0 0 / 0.5);
    pointer-events: none;
    visibility: hidden;
    display: grid;
    place-items: center;
    font-size: 64px;
  }
  .v-button-upload:hover .v-button-upload-overlay {
    visibility: visible;
  }
}

/* view/view.css */
@layer components;

/* main.css */
@layer base {
  body {
    background-color: var(--bg);
    color: var(--text);
    min-height: 100vh;
    font-family: var(--font-sans);
    font-optical-sizing: auto;
    font-size: 1rem;
    font-style: normal;
    font-weight: 400;
    line-height: 1.5;
    -webkit-text-size-adjust: 100%;
    -moz-text-size-adjust: none;
    text-size-adjust: none;
  }
  body:has(.v-app),
  body:has(#full-player) {
    overflow: hidden;
  }
}

